assets-src/sass/4-components/_c-informative-box.scss
// Component schema (HTML schema for block usage)
// <button class="informative-box">
//     <element class="informative-box--status"></element>
//     <element class="informative-box--icon"></element>
//     <element class="informative-box--title">
//         <h2> Title here </h2>
//         <i class="status-icon"></i>
//     </element>
//     <element class="informative-box--content">
//          <span class="more"> </span>
//          <span class="content">
//              <div class="item">
//                  <span class="label"></span>
//              </div>
//          </span>
//     </element>
// </button>


.informative-box {
    width: calc(100% - 23px);
    height: auto;
    background-color: #FFFFFF;
    box-shadow: 0 2px 6px 0 rgba(0,0,0,0.3);
    border-radius: 10px;
    position: relative;
    margin-left: 23px;
    padding: 0px;
    padding-bottom: 24px;
    cursor: pointer;
    transition: all 0.2s ease-in-out;

    &:not(.has-status) {
        padding-top: 20px;
    }

    &.active, &:hover {
        background-color: $brand-primary;
        transition: all 0.2s ease-in-out;

        .informative-box--icon {
            i {
                color: white;
            }

            &:before, &:after, & {
                background-color: $brand-primary;
                transition: all 0.2s ease-in-out;
            }
        }

        .informative-box--title, .informative-box--content {
            h2, i, .content, .more {
                color: white;
            }
        }
    }

    &--status {
        background-color: $brand-primary; 
        padding: 9px 32px;
        text-align: left;
        color: white;
        padding: 9px 32px;
        border-radius: 8px 8px 0 0;
        margin-bottom: 10px;
        font-weight: bold;
    }

    &--icon {
        position: absolute;
        left: -21.5px;
        width: 50px;
        height: 50px;
        background: white;
        border-radius: 50%;
        display: flex;
        justify-content: center;
        align-items: center;

        i {
            z-index: 99;
            font-size: 20px;
            color: $brand-primary;
        }

        &:before {
            transition: all 0.2s ease-in-out;
            content: "";
            display: block;
            width: 50px;
            height: 50px;
            position: absolute;
            padding: 1px;
            border-radius: 50%;
            box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
        }


        &:after {
            transition: all 0.2s ease-in-out;
            content: "";
            display: block;
            width: 39px;
            height: 67px;
            position: absolute;
            background: white;
            z-index: 0;
            right: -10px;
        }
    }

    &--title {
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin-bottom: 13px;
        margin-left: 40px;
        margin-right: 18px;

        h2 {
            color: #111111;
            font-family: $f_title;
            font-size: $font-size-base;
            font-weight: bold;
            letter-spacing: 0;
            line-height: 1.1875rem;
            margin-bottom: 0;
            text-align: left;
        }

        i {
            margin-left: 31px;
            font-size: 44px;
            color: $brand-primary;
        }
    }


    &--content {
        text-align: left;
        color: $brand-secondary;
        font-family: $f_body;
        font-size: 0.75rem;
        font-weight: 600;
        letter-spacing: 0;
        margin-left: 40px;
        line-height: 17px;

        .more {
            cursor: pointer;
            // remove
            display: none;
        }

        .content {
            // transform: scale(0);
            display: block;
            margin-right: 18px;
            transition: all .2s ease-in-out;

            .item {
                font-weight: normal;
                margin-bottom: 8px;
                
                .label {
                    display: block;
                    font-weight: bold;;
                }
            }
        }

        &.active {
            .content {
                transform: scale(1);
                height: auto;
                transition: all .2s ease-in-out;
            }

            .more {
                display: none;
            }
        }
    }


    //STATUS_SENT = self::STATUS_ENABLED;
    //STATUS_APPROVED = 10;
    //STATUS_WAITLIST = 8;
    //STATUS_NOTAPPROVED = 3;
    //STATUS_INVALID = 2;

    &.status-1 {
        // Default
    }

    &.status-10, &.status-8, &.status-3, &.status-2 {
        .informative-box--status {
            background: white;
        }

        .informative-box--title {
            h2 {
                color: white;
                font-weight: bold;
            }
        }

        .informative-box--content {
            color: white;
        }

        i {
            color: white;
        }
    }

    &.status-10 {
        background-color: $theme-color-secondary;

        .informative-box--status {
            color: $theme-color-secondary;
        }

        .informative-box--icon {
            &:before {
                background-color: $theme-color-secondary;
            }

            &:after {
                background-color: $theme-color-secondary;   
            }
        }
    }

    &.status-8 {
        background-color: $theme-color-quaternary;

        .informative-box--status {
            color: $theme-color-quaternary;
        }

        .informative-box--icon {
            &:before {
                background-color: $theme-color-quaternary;
            }

            &:after {
                background-color: $theme-color-quaternary;   
            }
        }

        .informative-box--title {
            i {
                border: 4px solid;
                border-radius: 50%;
                width: 38px;
                height: 38px;
                justify-content: center;
                align-items: center;
                display: flex;
                font-size: 22px;
                
                &:before {
                    content: "\f068";
                    font-weight: 600;
                }
            }
        }
    }

    &.status-3 {
        background-color: $theme-color-tertiary;

        .informative-box--status {
            color: $theme-color-tertiary;
        }

        .informative-box--title {
            i {
                &:before {
                    content: "\f057";
                }
            }
        }

        .informative-box--icon {

            &:before {
                background-color: $theme-color-tertiary;
            }

            &:after {
                background-color: $theme-color-tertiary;   
            }
        }
    }

    &.status-2 {
        background-color: $theme-color-quaternary;

        .informative-box--status {
            color: $theme-color-quaternary;
        }

        .informative-box--icon {
            &:before {
                background-color: $theme-color-quaternary;
            }

            &:after {
                background-color: $theme-color-quaternary;   
            }
        }
    }
}

